--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,12 +61,51 @@ jobs:
       - name: 🔽 Setup Docker Buildx
         uses: docker/setup-buildx-action@v3 # https://github.com/docker/setup-buildx-action
 
-      - name: 🙏 Build and push Docker image
+      # generate metadata for the build-stage image
+      - name: ✏ Setup Docker Metadata
+        id: metadata-base
+        uses: docker/metadata-action@v5 # https://github.com/docker/metadata-action
+        with:
+          images: |
+            ${{ env.GHCR_IMAGE }}
+          flavor: |
+            latest=auto
+            prefix=${{ matrix.config.debian_codename }}-
+          tags: |
+            type=schedule,pattern={{ date 'YYYYMMDD' }}
+            type=semver,pattern={{ version }}
+            type=semver,pattern={{ major }}.{{ minor }}
+            type=raw,value={{ date 'YYYYMMDD' }}-sha-{{ sha }},enabled=${{ github.event_name == 'push' }}
+            type=raw,value=latest
+
+        # generate metadata for the deploy image
+    #   - name: ✏ Setup Docker Metadata
+    #     id: metadata-base
+    #     uses: docker/metadata-action@v5 # https://github.com/docker/metadata-action
+    #     with:
+    #       images: |
+    #         ${{ env.GHCR_IMAGE }}
+    #       flavor: |
+    #         latest=auto
+    #         prefix=${{ matrix.config.debian_codename }}-deploy-
+    #       tags: |
+    #         type=schedule,pattern={{ date 'YYYYMMDD' }}
+    #         type=semver,pattern={{ version }}
+    #         type=semver,pattern={{ major }}.{{ minor }}
+    #         type=raw,value={{ date 'YYYYMMDD' }}-sha-{{ sha }},enabled=${{ github.event_name == 'push' }}
+    #         type=raw,value=latest
+
+      - name: 🙏 Build Docker image
         uses: docker/build-push-action@v6 # https://github.com/docker/build-push-action
         with:
           context: .
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/php-wasm-builder:latest
+          file: .devcontainer/debian/${{ matrix.config.debian_codename }}/Dockerfile
+          target: build-stage
+          platforms: linux/amd64
+          tags: ${{ steps.metadata-base.outputs.tags }}
+          labels: ${{ steps.metadata-base.outputs.labels }}
+          push: false
+          load: true
 
       - name: ❔List Docker Images
         run: |
