--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,11 @@ insert_final_newline = true
 indent_size = 4
 trim_trailing_whitespace = true
 
+[*.{yml,yaml}]
+indent_size = 2
+indent_style = space
+tab_width = 2
+
 [*.md]
 trim_trailing_whitespace = false
 
