--- a/.github/workflows/clean-workflows.yml
+++ b/.github/workflows/clean-workflows.yml
@@ -3,7 +3,7 @@
 # SPDX-FileCopyrightText: 2021-2025 Jens A. Koch.
 # SPDX-License-Identifier: BSL-1.0
 #
-# This file is part of https://github.com/jakoch/cpp-devbox
+# This file is part of https://github.com/jakoch/php-wasm-devbox
 #
 
 name: Clean Workflow Runs
