set permissions on clean workflow

--- a/.github/workflows/clean-workflows.yml
+++ b/.github/workflows/clean-workflows.yml
@@ -16,6 +16,10 @@ on:
   # You can manually run this workflow.
   workflow_dispatch:
 
+permissions:
+  actions: write
+  contents: read
+
 jobs:
   cleanup-workflows:
     name: "Clean Workflows"
