--- a/.github/workflows/clean-workflows.yml
+++ b/.github/workflows/clean-workflows.yml
@@ -78,6 +78,7 @@ jobs:
                   repo: context.repo.repo,
                   workflow_id: workflow
                 });
+                if (response.data.workflow_runs.length === 0) break;
                 if (response.data.workflow_runs.length > 0) {
                   for (const run of response.data.workflow_runs) {
                     if (now - Date.parse(run.created_at) > ms_in_day * days_to_expiration) {
@@ -85,6 +86,7 @@ jobs:
                     }
                   }
                 }
+                if (response.data.workflow_runs.length < 50) break;
               }
             }
             for (const run of runs_to_delete) {
@@ -108,24 +110,43 @@ jobs:
           script: |
             const pages = 5;
             let runs_to_delete = [];
+            // Get all workflows
+            const { data: workflowsData } = await github.rest.actions.listRepoWorkflows({
+              owner: context.repo.owner,
+              repo: context.repo.repo
+            });
+            // Find workflow with name "Clean Workflow Runs"
+            const dependabotWorkflow = workflowsData.workflows.find(w => w.name === "Clean Workflow Runs");
+            if (!dependabotWorkflow) {
+              console.log("❌ No workflow named 'Clean Workflow Runs' found.");
+              return;
+            }
+            const workflowId = dependabotWorkflow.id;
+            console.log(`✅ Found Dependabot workflow ID: ${workflowId}`);
+            // Fetch workflow runs
             for (let page = 0; page < pages; page += 1) {
-              let response = await github.rest.actions.listWorkflowRuns({
+              const response = await github.rest.actions.listWorkflowRuns({
                 owner: context.repo.owner,
+                repo: context.repo.repo,
+                workflow_id: workflowId, // Use dynamically fetched ID
                 page: page,
                 per_page: 50,
-                repo: context.repo.repo,
-                workflow_id: ".github/workflows/clean-workflows.yml"
               });
+              if (response.data.workflow_runs.length === 0) break;
               if (response.data.workflow_runs.length > 0) {
                 for (const run of response.data.workflow_runs) {
+                  if (run.triggering_actor?.login === 'dependabot[bot]') {
                     runs_to_delete.push([run.id, run.name]);
+                  }
                 }
               }
+              if (response.data.workflow_runs.length < 50) break;
             }
+            // Delete workflow runs
             for (const run of runs_to_delete) {
               console.log(`[Deleting] Run id ${run[0]} of '${run[1]}'.`);
               try {
-                await github.actions.deleteWorkflowRun({
+                await github.rest.actions.deleteWorkflowRun({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                   run_id: run[0]
@@ -163,6 +184,7 @@ jobs:
                 page: page,
                 per_page: 50,
               });
+              if (response.data.workflow_runs.length === 0) break;
               if (response.data.workflow_runs.length > 0) {
                 for (const run of response.data.workflow_runs) {
                   if (run.triggering_actor?.login === 'dependabot[bot]') {
@@ -170,6 +192,7 @@ jobs:
                   }
                 }
               }
+              if (response.data.workflow_runs.length < 50) break;
             }
             // Delete workflow runs
             for (const run of runs_to_delete) {
