--- a/.github/workflows/clean-workflows.yml
+++ b/.github/workflows/clean-workflows.yml
@@ -66,7 +66,8 @@ jobs:
             const pages = 5;
             // add the workflows runs to remove here
             const workflows = [
-              'build.yml'
+              'build.yml',
+              'check-spelling.yml'
             ]
             let runs_to_delete = [];
             for (const workflow of workflows) {
