--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,11 @@ on:
   push:
     branches:
       - main
+    # Restrict the workflow to run only on changes to the following paths.
+    paths:
+      - '.devcontainer/**'
+      - '.github/workflows/build.yml'
+      - 'src/**'
 
 jobs:
 
