--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -35,6 +35,21 @@ jobs:
           rm -rf .devcontainer node_modules test-results
           rm -f .editorconfig .gitignore biome.json readme.md serve.sh setup.sh
 
+      - name: Generate php-versions.json from WASM filenames
+        run: |
+          cd deploy/assets/wasm
+          echo "[" > php-versions.json
+          first=1
+          for file in php-*-web.wasm; do
+            [ -e "$file" ] || continue
+            # Extract version from filename, e.g. php-8.4.8-web.wasm -> 8.4.8
+            version=$(echo "$file" | sed -E 's/^php-([0-9]+\.[0-9]+\.[0-9]+)-web\.wasm$/\1/')
+            if [ $first -eq 0 ]; then echo "," >> php-versions.json; fi
+            echo "  {\"version\": \"$version\"}" >> php-versions.json
+            first=0
+          done
+          echo "]" >> php-versions.json
+
       - name: Set Application Version
         run: |
           cd deploy
