add a content display using cat

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -49,6 +49,7 @@ jobs:
             first=0
           done
           echo "]" >> php-versions.json
+          cat php-versions.json
 
       - name: Set Application Version
         run: |
