--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -61,6 +61,18 @@ jobs:
           echo "{\"version\": \"$version\", \"git_hash\": \"$git_hash\"}" > version.json
           rm -f package.json
 
+      - name: Test JSON files
+        run: |
+          cd deploy
+          for file in version.json php-versions.json playground/examples/examples.json; do
+            if [ -f "$file" ]; then
+              if ! jq empty "$file"; then
+                echo "Invalid JSON in $file"
+                exit 1
+              fi
+            fi
+          done
+
       - name: ✔ Initialize Git and commit
         run: |
           cd deploy
