--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -61,7 +61,7 @@ jobs:
           echo "{\"version\": \"$version\", \"git_hash\": \"$git_hash\"}" > version.json
           rm -f package.json
 
-      - name: Test JSON files
+      - name: Test JSON files for validity
         run: |
           cd deploy
           for file in version.json php-versions.json playground/examples/examples.json; do
